# jefdaj.github.io

./: .gitignore  CNAME  LICENSE  README.md  build.sh  index.html  index.md  publish.sh
src/: codeisland.cabal  codeisland.hs  index.css  index.html  main.css  main.html  page.css  page.html  page.template  posts.html  site.cabal  site.css  site.hs  site.html  stack.yaml
src/about/: index.md
src/aside/: aside.css  aside.html  mobile.css  mobile.html
src/css/: default.css
src/header/: header.css  header.html
src/home/: index.html
src/index/: index.md
src/js/: drawwordcloud.js
src/posts/: post.css  post.html  post.template
src/posts/2020/05/10/test-post/: index.md
src/posts/2020/05/10/test-post-2/: index.md
src/posts/2020/05/10/test-post-3/: index.md
src/posts/2021/01/10/test-post/: index.md
src/posts/2021/01/10/test-post-2/: index.md
src/posts/2021/02/19/test-feb/: index.md
src/posts/2021/03/03/how-to-use-this-blog/: index.md
src/posts/2021/03/03/source-code-for-this-blog/: index.md
src/posts/2021/03/03/source-for-this-blog/: index.md
src/posts/2021/03/03/why-learn-plutus/: index.md
src/posts/2021/03/04/code-for-this-blog/: index.md
src/posts/2021/03/04/learning-plutus-smart-contracts/: index.md
src/posts/2021/03/04/learning-smart-contracts-in-plutus/: index.md
src/posts/2021/03/04/plutus-intro/: index.md
src/posts/2021/03/04/why-learn-plutus/: index.md
src/recent/: index.html  index.md  recent.html
src/root/: CNAME
src/tags/: post-list.html  tag.html  tag.template
