name:                site
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://cryptois.land
license:             BSD3
license-file:        ../LICENSE
author:              jefdaj
maintainer:          jefdaj@protonmail.ch
copyright:           2020 jefdaj
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       hakyll,
                       hakyll-images,
                       filepath,
                       pandoc,
                       MissingH,
                       hjsmin,
                       text,
                       language-javascript,
                       aeson
